--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,4 +30,8 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
-  hello: "Hello world"
+  email: Email
+  password: Password
+  first_name: First Name
+  last_name: Last Name
+  remember_me: Remember me
